force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/User/fields/GM_ApplicableRegionAccess__c.field-meta.xml
<CustomField>
    <fullName>GM_ApplicableRegionAccess__c</fullName>
    <description>Functional Description: This field is used to filter CRMA data to only show the records based on the logged in users Regions 
User Story #: 5128466
Used in Integration: N
Bi-Directional Sync: N</description>
    <label>Applicable Region Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GWB_User_Region</valueSetName>
    </valueSet>
</CustomField>