force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/User/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>